--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "axios": "^1.4.0",
     "dotenv": "^5.0.1",
     "express": "^4.17.1",
+    "express-ws": "^5.0.2",
     "html-literal": "^1.1.0",
     "lodash": "^4.17.20",
     "mongoose": "^7.2.2",
-    "navigo": "^8.1.2"
+    "navigo": "^8.1.2",
+    "short-unique-id": "^4.4.4",
+    "ws": "^8.13.0"
   }
 }
