--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Savvy Coders Rock Paper Scissors",
   "type": "module",
   "scripts": {
-    "spa:build": "parcel build spa/index.html && cp _redirects ./dist/",
+    "spa:build": "parcel build spa/index.html && cp spa/_redirects ./dist/",
     "spa:watch": "parcel spa/index.html",
     "api:watch": "nodemon --watch ./api -e js api/app.js"
   },
